# rust

./: .gitignore  Cargo.toml  README.md  arch-hello-world.rs
binary_search/: Cargo.toml  README.md
binary_search/src/: main.rs
closures/: README.md
closures/src/: main.rs
enums/src/: enums_with_values.rs  main.rs
generics/: readme.md
generics/src/: main.rs
hashmaps/: README.md
hashmaps/src/: main.rs
iterators/: README.md
iterators/src/: basic_iterators.rs  into_iterator.rs  iterator_adaptors.rs  main.rs
largetNumber/: Cargo.toml
largetNumber/src/: main.rs
linear_search/: Cargo.toml
linear_search/src/: main.rs  number_of_unsuccessfull_attempts.rs
modules/: README.md
modules/src/: customer.rs  lib.rs  main.rs  order.rs  product.rs
modules/src/product/: category.rs
options/: README.md
options/src/: main.rs
ownership/: README.md
ownership/src/: main.rs
palindrome/: Cargo.toml
palindrome/src/: main.rs
phoneBook/: Cargo.toml
phoneBook/src/: main.rs
practice/: Cargo.toml
practice/src/: main.rs
result/: README.md
result/src/: main.rs
serde_json/: Cargo.toml
serde_json/src/: main.rs
sorting/: Cargo.toml  bubble.README.md  selection.README.md
sorting/src/: bubble_sort.rs  main.rs  selection_sort.rs
structs/src/: main.rs
testing/: README.md
testing/src/: lib.rs
threads/: Cargo.toml
threads/src/: main.rs
traits/: readme.md
traits/src/: main.rs
two_sum/: Cargo.toml
two_sum/src/: main.rs
