[workspace]
members = [
    "closures",
    "enums",
    "generics",
    "hashmaps",
    "iterators",
    "largetNumber",
    "modules",
    "options",
    "ownership",
    "phoneBook",
    "result",
    "serde_json",
    "structs",
    "testing",
    "threads",
    "traits",
    "two_sum",
    "palindrome", "practice", "linear_search", "binary_search", "sorting",
]
